--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,8 +8,8 @@
 <body>
     
     <%- include('./layouts/navbar')%>
-    <h1>Home page</h1>
-    <a href="/about">about</a>
+    <h1>about page</h1>
+    <a href="/">Home</a>
     <%- include('./layouts/footer')%>
 </body>
 </html>
